--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
 body {
-  margin: 0;
+  margin: 0 80px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  border: 2px solid black;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.gambar {
+  width: 250px;
+  height: 250px;
+  background-color: aliceblue;
+  margin: 10px 10px;
+  background-color: rgb(166, 166, 166);
+}
+
+.header{
+  padding-left: 40px;
+  margin: 20px;
+  background-color: rgb(138, 138, 138);
+  box-shadow: 0px 1px 2px 1px black;
+}
+
+.button{
+  background-color: rgb(79, 79, 79);
+  color: #fff;
+}
+
+.navbar{
+  background-color:rgb(79, 79, 79) ;
+}
+
+.judul{
+  margin-left: 10px;
+  margin-top: 30px;
+}
+.next{
+  background-color: rgb(138, 138, 138);
+  margin:0 60px;
+  padding: 10px;
+  box-shadow: 0px 1px 2px 1px black;
+}
+.about{
+  margin:0 60px;
+  padding: 10px;
+  
+}
+
+.member{
+  background-color: rgb(138, 138, 138);
+  padding: 20px;
+  margin:0 60px;
+  box-shadow: 0px 1px 2px 1px black;
+}
+
+.memberimage{
+  width: 100px;
+  height: 100px;
+  background-color:rgb(166, 166, 166);
+  border-radius: 50%;
+ margin-left: 40px;
+}
+
+.other{
+  padding-top: 50px;
+}
+.organaizer{
+  padding-top: 20px;
+}
+.mx-auto{
+ padding-right: 65px;
+}
+
+.past{
+  margin: 0 50px;
+}
+
+.pastrow{
+ background-color:rgb(138, 138, 138) ;
+ padding: 10px;
+ box-shadow: 0px 1px 2px 1px black;
+}
+
+.footer{
+  margin-top: 100px;
+  
 }
