--- a/src/index.css
+++ b/src/index.css
@@ -18,24 +18,18 @@ code {
   width: 250px;
   height: 250px;
   background-color: aliceblue;
-  margin: 10px 10px;
   background-color: rgb(166, 166, 166);
 }
 
 .header{
-  padding-left: 40px;
+  padding: 15px 15px;
   margin: 20px;
   background-color: rgb(138, 138, 138);
   box-shadow: 0px 1px 2px 1px black;
 }
 
 .button{
-  background-color: rgb(79, 79, 79);
-  color: #fff;
-}
-
-.navbar{
-  background-color:rgb(79, 79, 79) ;
+  width: 40%;
 }
 
 .judul{
