--- a/sesi-08/Hello-Style/src/components/External.css
+++ b/sesi-08/Hello-Style/src/components/External.css
@@ -1,5 +1,5 @@
-.conatiner {
-  background-color: beige;
+.container {
+  background-color: rgb(255, 255, 72);
   padding: 30px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
